--- a/pooja.css
+++ b/pooja.css
@@ -16,7 +16,7 @@
    border: 5px solid black ;
 }
 #div2{
-    background-color: burlywood;
+    background-color: rgb(27, 22, 193);
     height: 120px;
     width: 570px;
     margin-left: 150px;
