--- a/demo.css
+++ b/demo.css
@@ -17,8 +17,8 @@
     height: 248px;
 }
 .first_heading{
-    background-color: darkkhaki;
-    width: 350px;
+    background-color: rgb(22, 148, 212);
+    width: 400px;
     height: 300px;
     border-radius: 18px;
     border-style: double;
